1999-07-07  Tuomas J. Lukka  <lukka@iki.fi>
	* gnome-x-checks.m4: add a comment on how to get gtk-1.3 and
	glib 1.3 from CVS

1999-07-06  Tuomas J. Lukka  <lukka@iki.fi>

	* gnome-x-checks.m4: forbid compiling with Gtk-1.3 for now.
        gnome only works with 1.2 so far. 

1999-07-05  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome.m4: Make "extra library" message slightly easier to read.

Sat Jun 26 01:47:53 1999  Tim Janik  <timj@gtk.org>

	* compiler-flags.m4: give -Wunused to gcc instead of -Wno-unused.

1999-06-11  Tuomas J. Lukka <lukka@iki.fi>

	* gnome-guile-checks.m4: Debian has qt_null in -lqthreads but
 	  no main. Changed both checks for 'main' to qt_null.
	  I hope this is correct - it shouldn't break anything.

1999-05-11  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (MACROS): Add `gnome-bonobo-check.m4'.

1999-05-09  Jacob Berkman  <jberk+@cmu.edu>

	* gnome-bonobo-check.m4: made test program return 0,
	changed BONOBO_CHECK to not return "failure" on success

1999-04-16  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-print-check.m4 (GNOME_PRINT_CHECK): Fix invocation of
	AM_PATH_GNOME_PRINT. 
	* Makefile.am (MACROS): Sort lines.

Sun Mar 28 23:39:48 1999  Norbert Warmuth  <nwarmuth@privat.circular.de>

	* gnome-vfs.m4: Add --with-vfs option. GNOME_VFS_LIBS still needs
	to be fixed but that's not a problem because there's no libvfs, yet.

1999-03-10  Tomislav Vujec  <tvujec@carnet.hr>

	* aclocal-include.m4 (AM_ACLOCAL_INCLUDE): Add ACLOCAL_FLAGS in
	ACLOCAL. This allows maintainer rules to work if any of the macros
	change.

1999-03-10  Tomislav Vujec  <tvujec@carnet.hr>

	* gnome.m4 (GNOME_INIT_HOOK): Wrapped position parameter in
	testing for additional inits. It gets expanded while generating
	configure, resulting in an empty parameter list - syntax error in
	for statement.

1999-03-09  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome.m4 (GNOME_INIT): Add a new paramater, which is passed to
	GNOME_INIT_HOOK. 