@@ -1,3 +1,8 @@
+1999-07-30  Peter Teichman  <pat4@acpub.duke.edu>
+
+	* gnome-conduit-check.m4: added new file of checks. anything that
+	provides a pilot conduit is going to want this
+
 1999-07-07  Tuomas J. Lukka  <lukka@iki.fi>
 	* gnome-x-checks.m4: add a comment on how to get gtk-1.3 and
 	glib 1.3 from CVS
